# polars-baseball

./: .codecov.yml  .gitignore  .mailmap  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.zh-TW.md  codecov.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-TW.md  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  SECURITY.md  SECURITY.zh-TW.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: compile-datasets.yml  nightly-contract.yml  pytest.yml  python-publish.yml  verify-apis.yml
benchmarks/: __init__.py  __main__.py  cli.py  models.py  profiles.py  runner.py
benchmarks/reporters/: console.py  json_reporter.py
benchmarks/tracking/: comparator.py  loader.py
docs/: MAINTAINING.md  api_index.md  caching.md  fangraphs.md  index.md  jupyter.md  mlb_api.md  playerid_lookup.md  plotting.md  prospect_rankings.md  savant_gamefeed.md  standings.md  statcast.md  statcast_batter.md  statcast_pitcher.md  statcast_single_game.md  top_prospects.md
docs/guides/: caching.md  jupyter.md  plotting.md
docs/internal/: bwar_bat.md  bwar_pitch.md  chadwick_register.md  fg_batting_data.md  fg_pitching_data.md  lahman.md  playerid_reverse_lookup.md  retrosheet.md  statcast_fielding.md  statcast_running.md  statcast_utils.md  teamid_lookup.md
docs/reference/: bref.md  chadwick_register.md  fangraphs.md  fg_batting_data.md  fg_pitching_data.md  lookups.md  mlb_api.md  playerid_lookup.md  playerid_reverse_lookup.md  prospect_rankings.md  savant_gamefeed.md  standings.md  statcast.md  statcast_batter.md  statcast_pitcher.md
docs/zh-tw/: api_index.md  caching.md  fangraphs.md  index.md  jupyter.md  mlb_api.md  playerid_lookup.md  plotting.md  prospect_rankings.md  savant_gamefeed.md  standings.md  statcast.md  statcast_batter.md  statcast_pitcher.md  statcast_single_game.md  top_prospects.md
examples/: benchmark_statcast.py  fangraphs_leaderboard.py  mlb_schedule.py  statcast_pitch_mix.py
notebooks/: fangraphs_leaderboard_demo.ipynb  mlb_schedule_demo.ipynb  statcast_pitch_mix_demo.ipynb
polars_baseball/: __init__.py  _cache.py  _cache_locks.py  _client.py  _config.py  _encoding.py  _http_policy.py  _json_types.py  _json_utils.py  _player_lookup.py  _schema_utils.py  _season.py  _validation.py  context.py  exceptions.py  fangraphs.py  mlb.py  savant.py
polars_baseball/_schemas/: __init__.py  mlb.py  retrosheet.py
polars_baseball/apis/: _leaderboard_registry.py  bref.py  fangraphs.py  lahman.py  playerid.py  retrosheet.py  savant_fielding_running.py  savant_gamefeed.py  savant_leaderboards.py  standings.py  (+3 more)
scripts/: compile_datasets.py  lint_commit.py  statcast_timing.py  validate_cache.py  verify_all_apis.py
tests/: _async_utils.py  conftest.py
(+157 files in other folders)
